2003-10-23  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.6.0, 10.2-gcc/3.3
	and 10.3 trees only

2003-10-23  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.5.4, 10.2 tree only

2003-06-19  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.5.3

2003-04-04  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.5.2

2003-01-16  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.5.1

2002-12-07  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.5.0a

2002-11-24  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.5.0

2002-10-04  Ben Hines <benh57@users.sourceforge.net>

	* VERSION: Label the version 0.4.9.cvs to differentiate from
	packages/VERSION (10.1) tree

2002-09-21  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped distribution version to 0.4.1

2002-08-22  Dave Morrison <dmrrsn@users.sourceforge.net>

	* inject.pl: modified to work with both old and new directory
	layouts 
	
2002-04-15  Max Horn  <max@quendi.de>

	* VERSION: Bumped distribution version to 0.4.0

2002-01-15  Max Horn  <max@quendi.de>

	* inject.pl: install VERSION file, too

	* VERSION: Bumped distribution version to 0.3.2a

2002-01-10  Max Horn  <max@quendi.de>

	* VERSION: replaces fink-release (more consistent with other modules)

2002-01-10  Max Horn  <max@quendi.de>

	* fink-release: added, used to be in base-files and was installed
	into /sw/etc/. Moving it into the packages module seems to be
	much more logical.

2001-10-08  Christoph Pfisterer  <cp@chrisp.de>

	* inject.pl: Added code to create an appropriate stamp file when
	inject.pl is used. Added a hint to update the package manager to
	the displayed notice.

2001-07-22  Christoph Pfisterer  <cp@chrisp.de>
