@@ -1,3 +1,8 @@
+2003-10-30  Dave Morrison <dmrrsn@users.sourceforge.net>
+
+	* inject.pl: Modify so that it looks to see which trees are 
+	included with the distribution, and injects precisely those trees
+
 2003-10-23  Dave Morrison <dmrrsn@users.sourceforge.net>
 
 	* VERSION: Bumped distribution version to 0.6.0, 10.2-gcc/3.3
